<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/preference_cat_mydetails">
		<EditTextPreference android:key="myName" android:title="@string/preference_lbl_myname"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/preference_cat_sounds">
	    <ListPreference
        android:title="@string/preference_lbl_clicksound"
        android:key="beepSound"
        android:defaultValue="click"
        android:entries="@array/beepSoundsList"
        android:entryValues="@array/beepSoundsList"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="Buttons">
		<CheckBoxPreference
            android:key="voiceActivation"
            android:title="@string/preference_lbl_voiceactivated"
            android:defaultValue="click"
        />
	</PreferenceCategory>
	<!--<PreferenceCategory android:title="Channel options">
		<EditTextPreference android:key="channelName" android:title="Name"/>
		<CheckBoxPreference android:key="channelIsPublic" android:title="Visible on list"/>
		<CheckBoxPreference android:key="channelInviteRequired" android:title="Invitation required"/>
	</PreferenceCategory>-->
</PreferenceScreen>
